# AI-Engineer-GenAI-Developer-Roadmap

./: .gitignore  README.md  readme_clean.txt
.agents/workflows/: notion-noter.md
01_chat-app/: .gitignore
01_chat-app/app/: main.py  pyproject.toml
02_chat-app-ui/: README.md  package-lock.json  package.json
02_chat-app-ui/app/: globals.css  layout.tsx  page.tsx
03_mini_search_engine_FAISS/: .gitignore  pyproject.toml
03_mini_search_engine_FAISS/app/: main.py
03_mini_search_engine_FAISS/app/controller/: search.py
03_mini_search_engine_FAISS/app/controllers/: search.py
03_mini_search_engine_FAISS/app/core/: chunker.py  vector_store.py
03_mini_search_engine_FAISS/app/routes/: search.py
04_rag_pipeline/: .gitignore  main.py  pyproject.toml
04_rag_pipeline/core/: chunker.py  document_store.py  embeddings.py  generate.py  rag.py  vector_store.py
04_rag_pipeline/route/: rag.py  upload.py
05_text_similarity_engine/: README.md  main.py  pyproject.toml
05_text_similarity_engine/core/: embedding_similarity.py
05_text_similarity_engine/route/: similarity.py
06_semantic_search_engine/: pyproject.toml
06_semantic_search_engine/app/: main.py
06_semantic_search_engine/core/: __init__.py  data.py  embeddings.py  similarity.py
07_pdf_rag_assistant/: Dockerfile  HYBRID_PIPELINE_README.md  main.py  pyproject.toml
07_pdf_rag_assistant/core/: agent.py  chunker.py  embeddings.py  hybrid_search.py  keyword_search.py  memory.py  pdf_loader.py  rag_pipeline.py  reranker.py  tools.py  vector_store.py
Topics/pandas/: Untitled-1.ipynb  april_timesheet.xlsx  (+6 more)
(+20 files in other folders)
